--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://user:password@ep-xxxx.neon.tech/db
-JWT_SECRET=your_jwt_secret
+DATABASE_URL=postgresql://vyapar_owner:npg_QF3xlpw2HukE@ep-plain-star-a1ufo75b-pooler.ap-southeast-1.aws.neon.tech/vyapar?sslmode=require
+JWT_SECRET=fcf07a57b18c4c387f2ee35820377785
