--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@neondatabase/serverless": "^1.0.0",
         "bcryptjs": "^3.0.2",
         "dotenv": "^16.5.0",
+        "drizzle-kit": "^0.31.1",
         "drizzle-orm": "^0.43.1",
         "drizzle-zod": "^0.8.2",
         "fastify": "^5.3.3",
