--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,34 @@
 # Database
-DATABASE_URL="postgresql://username:password@localhost:5432/vyapar_db"
+DATABASE_URL=postgresql://username:password@host:5432/database_name
 
-# JWT Secret
-JWT_SECRET="your-super-secret-jwt-key-here"
+# JWT Secret (minimum 32 characters, use a strong random string)
+JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters
+JWT_EXPIRES_IN=7d
 
-# Email Configuration (Gmail)
-EMAIL_USER="your-email@gmail.com"
-EMAIL_APP_PASSWORD="your-app-specific-password"
+# Email (for OTP/email notifications)
+EMAIL_USER=your-email@gmail.com
+EMAIL_APP_PASSWORD=your-16-character-app-password
 
-# Twilio Configuration (SMS)
-TWILIO_ACCOUNT_SID="your-twilio-account-sid"
-TWILIO_AUTH_TOKEN="your-twilio-auth-token"
-TWILIO_PHONE_NUMBER="+1234567890"
+# Twilio (for SMS OTP)
+TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+TWILIO_PHONE_NUMBER=+1234567890
 
 # Google OAuth
-GOOGLE_CLIENT_ID="your-google-client-id"
-GOOGLE_CLIENT_SECRET="your-google-client-secret"
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # Facebook OAuth
-FACEBOOK_APP_ID="your-facebook-app-id"
-FACEBOOK_APP_SECRET="your-facebook-app-secret"
+FACEBOOK_APP_ID=your-facebook-app-id
+FACEBOOK_APP_SECRET=your-facebook-app-secret
 
-# OpenAI API
-OPENAI_API_KEY="your-openai-api-key"
+# OpenAI API (for AI insights)
+OPENAI_API_KEY=sk-your-openai-api-key
 
-# Google Drive API (for backup)
-GOOGLE_DRIVE_CLIENT_ID="your-google-drive-client-id"
-GOOGLE_DRIVE_CLIENT_SECRET="your-google-drive-client-secret"
-GOOGLE_DRIVE_REFRESH_TOKEN="your-google-drive-refresh-token"
-
-# Server Configuration
+# Server
 PORT=4000
-NODE_ENV="development"
+HOST=0.0.0.0
+NODE_ENV=development
+
+# (Optional) For file uploads, set a base URL for download links
+BASE_URL=http://localhost:4000
