--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
 DATABASE_URL=postgresql://vyapar_owner:npg_QF3xlpw2HukE@ep-plain-star-a1ufo75b-pooler.ap-southeast-1.aws.neon.tech/vyapar?sslmode=require
 JWT_SECRET=fcf07a57b18c4c387f2ee35820377785
+# JWT_EXPIRES_IN=7d
+# GOOGLE_CLIENT_ID=your-google-client-id
+# GOOGLE_CLIENT_SECRET=your-google-client-secret
+# FACEBOOK_APP_ID=your-facebook-app-id
+# FACEBOOK_APP_SECRET=your-facebook-app-secret
+# OPENAI_API_KEY=your-openai-api-key
+# SMS_API_KEY=your-sms-service-api-key
+# BASE_URL=http://localhost:4000
+# PORT=4000
+# HOST=0.0.0.0
