--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,25 @@
 # Database
-DATABASE_URL=postgresql://username:password@host:5432/database_name
+DATABASE_URL=postgresql://username:password@localhost:5432/vyapar
 
-# JWT Secret (minimum 32 characters, use a strong random string)
-JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters
+# JWT
+JWT_SECRET=your-super-secret-jwt-key
 JWT_EXPIRES_IN=7d
 
-# Email (for OTP/email notifications)
-EMAIL_USER=your-email@gmail.com
-EMAIL_APP_PASSWORD=your-16-character-app-password
-
-# Twilio (for SMS OTP)
-TWILIO_ACCOUNT_SID=ACxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-TWILIO_AUTH_TOKEN=your-twilio-auth-token
-TWILIO_PHONE_NUMBER=+1234567890
-
 # Google OAuth
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_ID=your-google-client-id
 GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # Facebook OAuth
 FACEBOOK_APP_ID=your-facebook-app-id
 FACEBOOK_APP_SECRET=your-facebook-app-secret
 
-# OpenAI API (for AI insights)
-OPENAI_API_KEY=sk-your-openai-api-key
+# OpenAI API (for AI features)
+OPENAI_API_KEY=your-openai-api-key
+
+# SMS/OTP Service (optional)
+SMS_API_KEY=your-sms-service-api-key
 
 # Server
+BASE_URL=http://localhost:4000
 PORT=4000
 HOST=0.0.0.0
-NODE_ENV=development
-
-# (Optional) For file uploads, set a base URL for download links
-BASE_URL=http://localhost:4000
