--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL=postgresql://vyapar_owner:npg_QF3xlpw2HukE@ep-plain-star-a1ufo75b-pooler.ap-southeast-1.aws.neon.tech/vyapar?sslmode=require
-JWT_SECRET=fcf07a57b18c4c387f2ee35820377785
+DATABASE_URL=db_url
+JWT_SECRET=secret
 # JWT_EXPIRES_IN=7d
 # GOOGLE_CLIENT_ID=your-google-client-id
 # GOOGLE_CLIENT_SECRET=your-google-client-secret
